objects/LAT_ClientAmountPOP__c.object
<CustomObject>
    <fields>
        <fullName>actualAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Qtde Atual</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>clientMaterial__c</fullName>
        <label>ClienteMaterial</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>client__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Cliente</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Materiales</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>oldAmount__c</fullName>
        <label>Qtde Anterior</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Material POP</label>
        <referenceTo>LAT_Produto_POP__c</referenceTo>
        <relationshipName>Materiales_Cliente</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Material POP Cliente</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Material Cliente</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Materiais POP Cliente</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>